<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">DoreComic</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="t_ng">Tổng:</string>
    <string name="trang">trang</string>
    <string name="default_name">default name</string>
    <string name="chapter">Danh sách tập</string>
    <string name="_99">99+</string>
    <string name="user_name">User Name</string>
    <string name="id_000000">ID: 000000</string>
    <string name="love">Yêu thích</string>
    <string name="logout_vie">Đăng xuất</string>
    <string name="history">Lịch sử</string>
    <string name="news">Khám phá</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_string">Vui lòng đăng nhập để tiếp tục</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="pre">Tập trước</string>
    <string name="txt_continue">Đọc tiếp</string>
    <string name="txt_next">Tập tiếp</string>
    <string name="chap_1">Chap 1</string>
    <string name="back">Back</string>
    <string name="back_vie">Quay lại</string>
    <string name="choose">Lựa chọn</string>
    <string name="open">Mở rộng</string>
    <string name="file">file</string>
    <string name="facebook_app_id">991958841674048</string>
    <string name="fb_login_protocol_scheme">fb991958841674048</string>
    <string name="file_text">Chọn thư mục lưu truyện offline</string>
    <string name="login_vie">Đăng nhập</string>
    <string name="feed_back">Phản hồi</string>
    <string name="close_app_vie">Bạn muốn thoát ứng dụng ?</string>
    <string name="out_vie">Thoát</string>
    <string name="cancel_vie">Hủy</string>
    <string name="ic_token"
        tools:ignore="TypographyDashes">E4280CE7-338F-4364-80E7-13C6CB1589D2</string>
    <string name="continue_vie">Tiếp tục</string>


</resources>