<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="14"
    android:orientation="vertical"
    android:background="?android:attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:gravity="center"
            android:id="@+id/txt_current_path"
            android:text="@string/file_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_file_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12"
        android:background="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/red"
            android:textColor="@color/white"
            android:text="@string/back_vie"
            android:textAllCaps="false"
            tools:ignore="NestedWeights" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginRight="0.1dp"
            android:id="@+id/btn_chosefile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/red"
            android:textColor="@color/white"
            android:text="@string/choose"
            android:textAllCaps="false"
            tools:ignore="NestedWeights,RtlHardcoded" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_openfile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/red"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:text="@string/open"
            tools:ignore="ButtonStyle" />
    </LinearLayout>


</LinearLayout>