<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view_vol"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_marginVertical="5dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp">

    <FrameLayout
        android:alpha="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <FrameLayout
        android:layout_marginBottom="3dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="3dp">
        <ImageView
            android:id="@+id/cover_image"
            android:layout_width="70dp"
            android:src="@drawable/default_comic"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription,MissingConstraints" />

        <TextView
            android:paddingHorizontal="16dp"
            android:ellipsize="marquee"
            android:id="@+id/txt_name_vol_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:marqueeRepeatLimit ="marquee_forever"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scrollHorizontally="true"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="17sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/cover_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_name_vol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cover_image"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_ng"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txt_total_page" />
        <TextView
            android:layout_marginEnd="10dp"
            android:id="@+id/txt_total_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trang"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="10dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>