<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:background="@drawable/text_blue_bg_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/close_app_vie"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="8dp"
            android:background="@drawable/blue_bg"
            app:layout_constraintBottom_toBottomOf="@+id/textView5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_close"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_width="0dp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/out_vie"
                android:textAllCaps="false"
                android:textColor="@color/black_500"
                tools:ignore="UnusedAttribute" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="4dp"
                android:background="@drawable/blue_bg" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/cancel_vie"
                android:textAllCaps="false"
                android:textColor="@color/black_500"
                tools:ignore="UnusedAttribute" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/icon_close"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>