<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ReadingActivity">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/container_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/bg_gradient_top_name_chap"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/container">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="24dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/chapter_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/chap_1"
            android:textColor="@color/white" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/container_btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/transparent"
        android:orientation="horizontal"
        android:paddingHorizontal="36dp"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_pre"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/red_left_click_btn"
            android:backgroundTintMode="multiply"
            android:elevation="0dp"
            android:text="@string/pre"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="13sp"
            tools:ignore="NestedWeights" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_continue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:backgroundTintMode="multiply"
            android:layout_weight="1"
            android:background="@drawable/red_center_click_btn"
            android:src="@drawable/ic_grid"
            android:textAllCaps="false"
            android:textColor="@color/white"
            tools:ignore="NestedWeights" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:backgroundTintMode="multiply"
            android:layout_weight="1"
            android:background="@drawable/red_right_click_btn"
            android:elevation="0dp"
            android:text="@string/txt_next"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="13sp"
            tools:ignore="NestedWeights" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>